--- a/tv/resources/css/style.css
+++ b/tv/resources/css/style.css
@@ -305,7 +305,7 @@ a.feeditem.normal .feed-loading-icon {
 	font-size: 11px;
 	color: #FFFFFF;
 	margin: 0px 8px 0px 8px;
-	padding: 3px 0px 3px 0px;
+	padding: 2px 0px 4px 0px;
 	font-weight: normal;
 	background: left top repeat-x;
 	min-width: 7px;
